feat(admin): add promedio fantasy and plantel count to players and dts tables